# SD---Distributed-Systems-UFRJ

./: CMakeLists.txt  README.md
mutex/: package.json  task.md
pipes/: program.cpp  task.md
proj1/pipes/: program.cpp
proj1/signals/pt1/: CMakeLists.txt  main.cpp  program1.cpp
proj1/signals/pt2/: program2.cpp
proj1/sockets/: socketsClient.cpp  socketsServer.cpp
rpc/: task.md
rpc/proto/: operador.pb.go
rpc/server/: server.go
semaphore/: program.cpp  task.md  time.sh
signals/: task.md
signals/handler/: program2.cpp
sockets/: socketsClient.cpp  task.md
spinlock/: mean.py  program.cpp  readme.md  time.sh
trabalho3/ex2/: run-exercicio2.sh
trabalho3/ex2/client/: client.go
trabalho3/ex2/proto/: operador.proto
trabalho3/ex2/server/: server.go
trabalho3/ex3/: check.js  index.js  package.json
