cmake_minimum_required(VERSION 3.5)
project(sd)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES proj1/signals/pt1/program1.cpp)
set(SOURCE_FILES proj1/signals/pt2/program2.cpp)
set(SOURCE_FILES proj1/pipes/program.cpp)
set(SOURCE_FILES_SERVER proj1/sockets/socketsServer.cpp)
set(SOURCE_FILES_CLIENT proj1/sockets/socketsClient.cpp)
add_executable(signals1 ${SOURCE_FILES})
add_executable(signals2 ${SOURCE_FILES})
add_executable(program ${SOURCE_FILES})
add_executable(socketsServer ${SOURCE_FILES_SERVER})
add_executable(socketsClient ${SOURCE_FILES_CLIENT})